feat: multiple
- feat: settings singleton in core
- feat: sources model for multiple sources of media
- feat: auto discover http URL of server
