# shared/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.0"
+openapi: "3.1.0"
 info:
   version: 1.0.0
   title: RadioMux
@@ -16,17 +16,43 @@ paths:
             format: int64
       responses:
         "200":
+          description: QR code as PNG.
           content:
             image/png:
               schema:
                 type: string
                 format: binary
         default:
-          description: unexpected error
+          description: Unexpected error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /sources/{id}/{slug*}:
+    get:
+      description: Get file by source id and slug.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - in: path
+          name: slug
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: File content.
+        default:
+          description: Unexpected error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
 components:
   schemas:
     Error:
